<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="whetselsapps.spendingtracker.MainActivity" >

    <!-- title -->
    <TextView
        android:id="@+id/new_exp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:text="@string/new_exp_title"
        android:textSize="@dimen/title_text"
        android:textStyle="bold" />

    <!-- account label -->
    <TextView
        android:id="@+id/act_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_exp_title"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/act_text_view"
        android:textSize="@dimen/normal_text" />

    <!-- account selector -->
    <Spinner
        android:id="@+id/act_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_view_height"
        android:layout_toEndOf="@id/act_text_view"
        android:layout_below="@id/new_exp_title"
        android:background="@drawable/border"
        android:layout_marginBottom="@dimen/vertical_margin"/>

    <!-- amount label -->
    <TextView
        android:id="@+id/amnt_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/act_spinner"
        android:text="@string/amnt_text_view"
        android:textSize="@dimen/normal_text"
        android:layout_marginEnd="@dimen/horizontal_margin" />

    <!-- amount entry -->
    <EditText
        android:id="@+id/amnt_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_view_height"
        android:minWidth="@dimen/min_view_width"
        android:layout_toEndOf="@id/amnt_text_view"
        android:layout_below="@id/act_spinner"
        android:inputType="number"
        android:textSize="@dimen/normal_text"
        android:background="@drawable/border"/>

    <!-- desc label -->
    <TextView
        android:id="@+id/desc_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/amnt_text_view"
        android:layout_alignParentStart="true"
        android:text="@string/desc_text_view"
        android:textSize="@dimen/normal_text"
        android:layout_marginTop="@dimen/vertical_margin"/>

    <!-- description entry -->
    <EditText
        android:id="@+id/desc_entry"
        android:layout_width="match_parent"
        android:minHeight="@dimen/min_desc_height"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text"
        android:layout_below="@id/desc_text_view"
        android:background="@drawable/border"/>

    <!-- submit button -->
    <Button
        android:id="@+id/new_ex_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit_text"
        android:textSize="@dimen/normal_text"
        android:padding="@dimen/button_padding"/>

</RelativeLayout>